[package]
name = "rb3-batch-demangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
cwdemangle = { git = "https://github.com/encounter/cwdemangle", version = "0.1.7" }
lazy_static = "1.4.0"
